--- a/app/config/config_test.yml
+++ b/app/config/config_test.yml
@@ -5,8 +5,17 @@ framework:
     test: ~
     session:
         storage_id: session.storage.mock_file
+        name: MOCKSESSION
     profiler:
         collect: false
+
+doctrine:
+    dbal:
+        default_connection: default
+        connections:
+            default:
+                driver:   pdo_sqlite
+                path:     "%kernel.cache_dir%/test.db"
 
 web_profiler:
     toolbar: false
@@ -14,3 +23,7 @@ web_profiler:
 
 swiftmailer:
     disable_delivery: true
+
+liip_functional_test:
+    cache_db:
+        mysql: liip_functional_test.services_database_backup.mysql
