--- a/composer.json
+++ b/composer.json
@@ -33,6 +33,7 @@
         "twig/twig": "^1.0||^2.0"
     },
     "require-dev": {
+        "liip/functional-test-bundle": "~2.0@alpha",
         "sensio/generator-bundle": "^3.0",
         "symfony/phpunit-bridge": "^3.0"
     },
